@@ -16,7 +16,12 @@ build_requires 'Test::More' => 0; # 5.007003
 my @dir = qw(libutf libfmt libregexp);
 makemaker_args DIR => [ @dir ];
 makemaker_args INC => join ' ', map { "-I$_" } @dir;
-makemaker_args LDDLFLAGS => '-shared lib*/*.o';
+
+# This used to be '-shared lib*/*.o' but that doesn't work on Win32
+my @obj = map  { s/\.c$/.o/; $_ }
+          grep { ! /test/ }
+          glob "lib*/*.c";
+makemaker_args LDDLFLAGS => "-shared @obj";
 
 tests 't/*.t';
 
