@@ -1,3 +1,7 @@
+2007-07-17  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.14)
+
+	* Makefile.PL: Globbing doesn't work on windows, do it explicitly in Perl
+
 2007-07-16  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.13)
 
 	* lib*: Don't make dynamic dynamic libs, this should solve RT#28044
